tests/NormalTests/paczka1/fuzzy1/16787060.err
Error in line 3: 1cPQCk0 S577 12,8
Error in line 9: IHa A81v 0,v
Error in line 5: 1cPQCk0 A866 41,2
Error in line 10: 1cPQCk0 S519 67,8
Error in line 4: S519 S519 45,3
Error in line 6: IHa A866 61,8
Error in line 20: EKstbYDxo S5ll 160,l
Error in line 24: IHa S519 44,4
